fix text flash on safari

--- a/src/dialog.css
+++ b/src/dialog.css
@@ -55,6 +55,7 @@
   /* position: relative; */
   width: 100%;
   margin-left: 2%;
+  padding-bottom: 40px;
   /* border: var(--border-width) solid green; */
   /* padding: 10px 20px 30px; */
   text-align: left;
@@ -173,3 +174,7 @@ transition: color 1s ease, text-shadow 1s ease, -webkit-text-stroke-color 1s eas
   }
 }
 
+.hiding {
+  background-color: green;
+  visibility: hidden;
+}
